--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "react-facebook-login": "^4.1.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
